--- a/client/admin/admin.html
+++ b/client/admin/admin.html
@@ -1,8 +1,10 @@
 <template name="admin">
 
 <ul>
+
 <li>
-	<input id='resetData' type="button" value="reset" />
+	reload comic data
+	<input id='resetData' type="button" value="resetData" class="btn" />
 </li>
 </ul>
 
