--- a/client/home.html
+++ b/client/home.html
@@ -2,7 +2,7 @@
 
 <div id="main" class="row-fluid">
 
-<h3>stories</h3>
+<h3>Storylist</h3>
   <li><a href='/storyList'>storyList</a></li>
 
 <h3>animation engine</h3>
