css only version

--- a/client/panels/caption.html
+++ b/client/panels/caption.html
@@ -1,5 +1,5 @@
 <template name="caption">
-<div class='caption'>
+<div class='caption' style='position:absolute; left: {{pos2.[0]}}%; top:{{pos2.[1]}}%;'>
 {{text}}
 </div>
 </template>
