--- a/client/stories/storyItem.html
+++ b/client/stories/storyItem.html
@@ -1,7 +1,8 @@
 <template name="storyItem">
-    <div class="storyItem">
+
+    <div class="row storyItem">
       <h3><a href="/story/{{cname}}/cover">{{title}}</a></h3>
-      <span>/story/{{cname}}/cover</span>
       <span>{{description}}</span>
     </div>
+    
 </template>
