--- a/client/panels/nextButton.html
+++ b/client/panels/nextButton.html
@@ -1,5 +1,5 @@
 <template name="nextButton">
-<div class='nextButton' style='{{panelStyle this}}'>
+<div class='btn nextButton' style='{{nextButton this}}'>
 <a href='{{storyUrl this}}'>{{text}}</a>
 </div>
 </template>
