working on mockup tool

--- a/client/admin/admin.html
+++ b/client/admin/admin.html
@@ -1,11 +1,15 @@
 <template name="admin">
 
-<ul>
+<div id="main" class="row-fluid">
+	<h3>Storylist</h3>
+	<li><a href='/storyList'>storyList</a></li>
+	<h3>animation engine</h3>
+	<li><a href='/comics/berlin/cover'>comics/berlin/cover</a></li>
+</div>
 
 <li>
 	reload comic data
 	<input id='resetData' type="button" value="resetData" class="btn" />
 </li>
-</ul>
 
 </template>
